[package]
name = "aes"
version = "0.1.0"
authors = ["Andrew Bennett <andrew.bennett@toyotaconnected.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aesimpl = { version = "0.3.2", package = "aes" }
xor = { path = "../xor" }
rand = "0.7.2"
