[package]
name = "aes"
version = "0.1.0"
authors = ["Andrew Bennett <potatosaladx@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aesimpl = { version = "0.8.2", package = "aes" }
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand = "0.8.5"
xor = { path = "../xor" }
