[package]
name = "cryptopals"
version = "0.1.0"
authors = ["Andrew Bennett <andrew.bennett@toyotaconnected.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.11.0"
hex = "0.4.0"
lazy_static = "1.4.0"
rand = "0.7.2"
serde = { version = "1.0.102", features = ["derive"] }
serde_urlencoded = "0.6.1"
quickcheck = "0.9.0"
quickcheck_macros = "0.8.0"
url = "2.1.0"
aes = { path = "../aes" }
hash = { path = "../hash" }
oracles = { path = "../oracles" }
pkcs7 = { path = "../pkcs7" }
xor = { path = "../xor" }

[build-dependencies]
cc = { version = "1.0.47", features = ["parallel"] }
