[package]
name = "cryptopals"
version = "0.1.0"
authors = ["Andrew Bennett <potatosaladx@gmail.com>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.60"
base64 = "0.20.0"
futures = "0.3.25"
hex = "0.4.3"
lazy_static = "1.4.0"
rand = "0.8.5"
reqwest = "0.11.13"
serde = { version = "1.0.152", features = ["derive"] }
serde_cbor = "0.11.2"
serde_urlencoded = "0.7.1"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
tokio = { version = "1.23.0", features = ["full"] }
url = "2.3.1"
warp = "0.2.2"
aes = { path = "../aes" }
hash = { path = "../hash" }
kex = { path = "../kex" }
mac = { path = "../mac" }
oracles = { path = "../oracles" }
pkcs7 = { path = "../pkcs7" }
xor = { path = "../xor" }

[build-dependencies]
cc = { version = "1.0.78", features = ["parallel"] }
