[package]
name = "hash"
version = "0.1.0"
authors = ["Andrew Bennett <andrew.bennett@toyotaconnected.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.0"

[dev-dependencies]
quickcheck = "0.9.0"
quickcheck_macros = "0.8.0"
sha1impl = { package = "sha1", version = "0.6.0" }
