[package]
name = "hash"
version = "0.1.0"
authors = ["Andrew Bennett <potatosaladx@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
sha2impl = { package = "sha2", version = "0.10.6" }

[dev-dependencies]
md4impl = { package = "md4", version = "0.10.2" }
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
sha1impl = { package = "sha1", version = "0.10.5" }
