[package]
name = "kex"
version = "0.1.0"
authors = ["Andrew Bennett <andrew.bennett@toyotaconnected.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# num = { version = "0.3.0-pre", features = ["rand", "std"], git = "https://github.com/rust-num/num" }
hash = { path = "../hash" }
mac = { path = "../mac" }
num-bigint-dig = { version = "0.6.0", features = ["i128", "prime", "std", "u64_digit"] }
num-integer = "0.1.43"
num-traits = "0.2.11"
rand = "0.7.3"
# num-primes = "0.1.1"

[dev-dependencies]
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
