[package]
name = "kex"
version = "0.1.0"
authors = ["Andrew Bennett <potatosaladx@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# num = { version = "0.3.0-pre", features = ["rand", "std"], git = "https://github.com/rust-num/num" }
hash = { path = "../hash" }
mac = { path = "../mac" }
num-bigint-dig = { version = "0.8.2", features = ["i128", "prime", "std", "u64_digit"] }
num-integer = "0.1.45"
num-traits = "0.2.15"
rand = "0.8.5"
# num-primes = "0.3.0"

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
