[package]
name = "mac"
version = "0.1.0"
authors = ["Andrew Bennett <andrew.bennett@toyotaconnected.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hash = { path = "../hash" }
hex = "0.4.2"
xor = { path = "../xor" }

[dev-dependencies]
hmacsha1impl = { package = "hmac-sha1", version = "0.1.3" }
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
