[package]
name = "mac"
version = "0.1.0"
authors = ["Andrew Bennett <potatosaladx@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hash = { path = "../hash" }
hex = "0.4.3"
xor = { path = "../xor" }

[dev-dependencies]
hmacsha1impl = { package = "hmac-sha1", version = "0.1.3" }
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
