[package]
name = "oracles"
version = "0.1.0"
authors = ["Andrew Bennett <andrew.bennett@toyotaconnected.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = { path = "../aes" }
pkcs7 = { path = "../pkcs7" }
rand = "0.7.2"
async-trait = "0.1.31"
